cicd_base/argocd-k3s.yaml
# This manifest is to install ArgoCD on k3s - it is not required for mikrok8s as a addon is available
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
