cicd_base/argocd-gateway-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argo-cd-argocd-server-np-svc
  namespace: argocd
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/name: argocd-server
  type: NodePort
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-ui-http-route
  namespace: argocd
spec:
  parentRefs:
  - name: cluster-gw
    sectionName: http
  hostnames:
  - "argocd.example.tld"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argo-cd-argocd-server-np-svc
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: argocd-ui-https-route
  namespace: argocd
spec:
  parentRefs:
  - name: cluster-gw
    namespace: nginx-gateway
    sectionName: tls
  hostnames:
  - "argocd.example.tld"
  rules:
  - backendRefs:
    - name: argo-cd-argocd-server-np-svc
      port: 8443
