cicd_base/argocd-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argo-cd-argocd-server-np-svc
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: "https"
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/name: argocd-server
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: argocd.example.tld
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server-np-svc
            port:
              name: https
