cicd_base/tekton-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tekton-np-svc
  namespace: tekton-pipelines
spec:
  ports:
  - name: http
    port: 9097
    protocol: TCP
    targetPort: 9097
  selector:
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/part-of: tekton-dashboard
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-ui-ingress
  namespace: tekton-pipelines
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
  - host: tekton-ui.example.tld
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tekton-np-svc
            port:
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: tekton-np-webhook-helm-pipelines-svc
  namespace: default
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: helm-pipelines-event-listener
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-iac-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
  - host: tekton-iac.example.tld
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tekton-np-webhook-helm-pipelines-svc
            port:
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: tekton-np-webhook-app-ctrl-pipelines-svc
  namespace: default
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: app-ctrl-event-listener
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-app-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
  - host: tekton-app.example.tld
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tekton-np-webhook-app-ctrl-pipelines-svc
            port:
              name: http
